Накидать костыль проекта и впилить костяк свайпа

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,7 +1,13 @@
 @import 'reset.css';
-@import './slide/slide.styl'
+@import 'slider/slider.styl';
+@import './slide/slide.styl';
 
 html,
-body {
-  height: 100%
-}
+body,
+.root
+  height: 100%;
+
+
+body,
+.root
+  overflow: hidden;
