--- a/src/styles/slide/slide.styl
+++ b/src/styles/slide/slide.styl
@@ -2,4 +2,12 @@
   width 100%;
   height 100%;
   color: white;
+
+.slide.slide--goals
   background-color: #f8574a;
+
+.slide.slide--therapy
+  background-color: lightpink;
+
+.slide.slide--details
+  background-color: lightskyblue;
