--- a/src/styles/slider/slider.styl
+++ b/src/styles/slider/slider.styl
@@ -2,5 +2,5 @@
   width 100%;
   height 100%;
   overflow: visible;
-  transform: translateY(-100%);
+  // transform: translateY(-100%);
   transition: all 0.4s ease;
