--- a/src/styles/slider/slider.styl
+++ b/src/styles/slider/slider.styl
@@ -1,5 +1,9 @@
 .slider
   width 100%;
   height 100%;
-  overflow: visible;
-  transition: all 0.5s ease;
+
+  &__content
+    width 100%;
+    height 100%;
+    overflow: visible;
+    transition: all 0.5s ease;
