Прототип незавершенного дрэгбара (ползунка)

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,13 +1,13 @@
 @import 'reset.css';
-@import 'pagination/pagination.styl';
-@import 'slider/slider.styl';
+@import './pagination/pagination.styl';
+@import './slider/slider.styl';
 @import './slide/slide.styl';
+@import 'dragBar/dragBar.styl';
 
 html,
 body,
 .root
   height: 100%;
-
 
 body,
 .root
