--- a/src/styles/slider/slider.styl
+++ b/src/styles/slider/slider.styl
@@ -1,9 +1,16 @@
 .slider
   width 100%;
   height 100%;
+  position: relative
 
   &__content
     width 100%;
     height 100%;
     overflow: visible;
     transition: all 0.5s ease;
+
+  &__content--horizontal
+    display: flex;
+
+    .slide
+      flex-shrink: 0;
