Достилизуем бар и двигаем пин автоматом к нужному чекпоинту без анимации и перелистывания страницы

--- a/src/styles/dragBar/dragBar.styl
+++ b/src/styles/dragBar/dragBar.styl
@@ -1,11 +1,10 @@
 .dragBar
   position: absolute;
-  bottom: 150px;
+  bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
   width: 640px;
   height 80px;
-  background-color: red;
 
   &__line
     position: relative;
@@ -24,3 +23,13 @@
     width 44px;
     height 56px;
     background-image: url("../../assets/images/pin.png");
+
+  &__checkpoints
+    display: flex;
+    justify-content: space-between;
+    margin-top 30px;
+
+  &__checkpoint
+    font-family: "Gotham Pro", sans serif;
+    font-size: 20px;
+    line-height: 20px;
