--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,4 +1,5 @@
 @import 'reset.css';
+@import './fonts.styl';
 @import './pagination/pagination.styl';
 @import './slider/slider.styl';
 @import './slide/slide.styl';
