Первый слайд без цсс-анимации пипок оранжевых

--- a/src/styles/fonts.styl
+++ b/src/styles/fonts.styl
@@ -3,10 +3,10 @@ font-face($family, $path, $weight) {
     font-family: $family;
     font-weight: $weight;
 
-    src: url($path + '.woff') format('woff'),
-         url($path + '.eot') format('eot'),
-         url($path + '.ttf') format('ttf');
+    src: url($path + '.ttf') format('ttf');
   }
 }
 
+font-face('Gotham Pro', '../assets/fonts/GothamPro-Light', 300)
 font-face('Gotham Pro', '../assets/fonts/GothamPro', 400)
+font-face('Lato', '../assets/fonts/Lato-Regular', 400)
