--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -3,7 +3,8 @@
 @import './pagination/pagination.styl';
 @import './slider/slider.styl';
 @import './slide/slide.styl';
-@import 'dragBar/dragBar.styl';
+@import './dragBar/dragBar.styl';
+@import './components/swipeDown.styl';
 
 html,
 body,
