Добавили прототип бульбочки

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -5,6 +5,7 @@
 @import './slide/slide.styl';
 @import './dragBar/dragBar.styl';
 @import './components/swipeDown.styl';
+@import './components/bulb.styl';
 
 html,
 body,
