Доделали анимацию бульб на первом слайде

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -6,6 +6,7 @@
 @import './dragBar/dragBar.styl';
 @import './components/swipeDown.styl';
 @import './components/bulb.styl';
+@import './components/bulbGroup.styl';
 
 html,
 body,
