--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -16,3 +16,6 @@ body,
 body,
 .root
   overflow: hidden;
+
+body
+  font-family: "Gotham Pro", "Arial", "Arial", "Helvetica", "Garuda", sans-serif;
