--- a/src/styles/components/swipeDown.styl
+++ b/src/styles/components/swipeDown.styl
@@ -1,4 +1,5 @@
 .swipeDown
+  opacity: 0;
   box-sizing: border-box;
   position: absolute;
   left: 0;
@@ -7,9 +8,14 @@
   height: 84px;
   padding-top: 15px;
   text-align: center;
+  color: white;
   background-image: url("../../assets/images/swipe-down-bg.png");
   background-position: 50% 100%;
   background-size: cover;
+  transition: opacity 0.5s ease;
+
+  &--active
+    opacity: 1;
 
   &__text
     font-family: "Gotham Pro", sans-serif;
