Перенесли все стилевые файлы в папку components

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,9 +1,9 @@
 @import 'reset.css';
 @import './fonts.styl';
-@import './pagination/pagination.styl';
-@import './slider/slider.styl';
-@import './slide/slide.styl';
-@import './dragBar/dragBar.styl';
+@import './components/pagination.styl';
+@import './components/slider.styl';
+@import './components/slide.styl';
+@import './components/dragBar.styl';
 @import './components/swipeDown.styl';
 @import './components/bulb.styl';
 @import './components/bulbGroup.styl';
