Запретили подгрузку локальных шрифтов и исправили Ариал дважды

--- a/src/styles/fonts.styl
+++ b/src/styles/fonts.styl
@@ -3,7 +3,8 @@ font-face($family, $path, $weight) {
     font-family: $family;
     font-weight: $weight;
 
-    src: url($path + '.ttf') format('ttf');
+    src: url($path + '.ttf') format('truetype'),
+         local('☺');
   }
 }
 
