--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -18,4 +18,4 @@ body,
   overflow: hidden;
 
 body
-  font-family: "Gotham Pro", "Arial", "Arial", "Helvetica", "Garuda", sans-serif;
+  font-family: "Gotham Pro", "Arial", "Helvetica", "Garuda", sans-serif;
