--- a/src/styles/components/slide.styl
+++ b/src/styles/components/slide.styl
@@ -72,4 +72,10 @@
     transform: translateY(-80px);
 
 .slide.slide--details
-  background-color: dodgerblue;
+  background-image: url("../../assets/images/details-bg.jpg");
+
+  .slide__title
+    margin-left: 84px;
+    margin-top: 136px;
+    font-size: 30px;
+    color: white;
