Набросали черновик компонента-составной части звена патогенеза

--- a/src/styles/components/slide.styl
+++ b/src/styles/components/slide.styl
@@ -76,6 +76,15 @@
 
   .slide__title
     margin-left: 84px;
-    margin-top: 136px;
+    margin-top: 116px;
     font-size: 30px;
     color: white;
+
+.slide.slide--1988
+  background-image: url("../../assets/images/ice-1-bg.png");
+
+.slide.slide--2009
+  background-image: url("../../assets/images/ice-2-bg.png");
+
+.slide.slide--2016
+  background-image: url("../../assets/images/ice-3-bg.png");
