--- a/src/styles/fonts.styl
+++ b/src/styles/fonts.styl
@@ -11,3 +11,4 @@ font-face($family, $path, $weight) {
 font-face('Gotham Pro', '../assets/fonts/GothamPro-Light', 300)
 font-face('Gotham Pro', '../assets/fonts/GothamPro', 400)
 font-face('Lato', '../assets/fonts/Lato-Regular', 400)
+font-face('Lato', '../assets/fonts/Lato-bold', 700)
