Добавили классы для флексовой раскладки

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,5 +1,6 @@
 @import 'reset.css';
 @import './fonts.styl';
+@import './layout.styl';
 @import './components/pagination.styl';
 @import './components/slider.styl';
 @import './components/slide.styl';
@@ -7,6 +8,7 @@
 @import './components/swipeDown.styl';
 @import './components/bulb.styl';
 @import './components/bulbGroup.styl';
+@import './components/chainLink.styl';
 
 html,
 body,
