Написали компонент стрелочки

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -8,6 +8,7 @@
 @import './components/swipeDown.styl';
 @import './components/bulb.styl';
 @import './components/bulbGroup.styl';
+@import './components/arrow.styl';
 @import './components/chainLink.styl';
 
 html,
