--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -10,6 +10,7 @@
 @import './components/bulbGroup.styl';
 @import './components/arrow.styl';
 @import './components/chainLink.styl';
+@import './components/hyperglycemiaTernary.styl';
 
 html,
 body,
