Pointer-events none вешаем на swipeDown чтобы он не перекрывал бар

--- a/src/styles/components/swipeDown.styl
+++ b/src/styles/components/swipeDown.styl
@@ -13,9 +13,11 @@
   background-position: 50% 100%;
   background-size: cover;
   transition: opacity 0.5s ease;
+  pointer-events: none;
 
   &--active
     opacity: 1;
+    pointer-events: auto;
 
   &__text
     font-family: "Gotham Pro", sans-serif;
