Первые три компонента второго слайда

--- a/src/styles/components/chainLink.styl
+++ b/src/styles/components/chainLink.styl
@@ -82,6 +82,9 @@ smallChainLinkOffset = - smallChainLinkSize / 2;
   &--small &__text
     font-size: 19px;
 
+  &__box.flex-row &__text
+    padding-left: 14px;
+
   &__box.flex-row-reverse &__text
     text-align: right;
     padding-right: 14px;
