--- a/src/styles/components/chainLink/chainLink__globals.styl
+++ b/src/styles/components/chainLink/chainLink__globals.styl
@@ -10,4 +10,5 @@ indexFontSize = 36px;
 indexlineHeight = indexFontSize;
 contentOffsetY = (smallChainLinkSize / 2) - (indexlineHeight / 2);
 
-smallChainLinkOffsetY = (octetTextHeight / 2) - (smallChainLinkSize / 2)
+chainLinkShiftY = 8px;
+smallChainLinkOffsetY = (octetTextHeight / 2) - (smallChainLinkSize / 2) + chainLinkShiftY
