--- a/src/styles/components/slide.styl
+++ b/src/styles/components/slide.styl
@@ -76,8 +76,9 @@
 
   .slide__title
     margin-left: 84px;
-    margin-top: 98px;
+    margin-top: 113px;
     font-size: 30px;
+    line-height: @font-size;
     color: white;
 
 .slide.slide--1988
