--- a/src/styles/components/chainLink/chainLink.styl
+++ b/src/styles/components/chainLink/chainLink.styl
@@ -62,6 +62,15 @@
   &--kidneys &__image::after
     background-image: url("../../../assets/images/kidneys.png");
 
+  &--intestines &__image::after
+    background-image: url("../../../assets/images/intestines.png");
+
+  &--infection &__image::after
+    background-image: url("../../../assets/images/infection.png");
+
+  &--stomach &__image::after
+    background-image: url("../../../assets/images/stomach.png");
+
   &--small&--musle &__image::after
     background-image: url("../../../assets/images/musle.png");
     background-size: 95%;
@@ -78,6 +87,15 @@
 
   &--small&--brain &__image::after
     background-size: 46px auto;
+
+  &--small&--intestines &__image::after
+    background-size: 46px auto;
+
+  &--small&--infection &__image::after
+    background-size: 46px auto;
+
+  &--small&--stomach &__image::after
+    background-size: 42px auto;
 
   &__content
     display: flex;
