--- a/src/styles/components/hyperglycemia/hyperglycemia.styl
+++ b/src/styles/components/hyperglycemia/hyperglycemia.styl
@@ -55,6 +55,9 @@
     font-family: "Lato", sans-serif;
     font-weight: 500;
 
+  &__text--amylin
+    margin-bottom: 40px;
+
   &__panel
     font-family: "Lato", sans-serif;
     font-weight: 500;
