--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -39,3 +39,9 @@
 
 .flex-align-baseline
   align-items: baseline;
+
+.flex-salign-start
+  align-self: flex-start;
+
+.flex-salign-end
+  align-self: flex-end;
