--- a/src/styles/components/chainLink/chainLink.styl
+++ b/src/styles/components/chainLink/chainLink.styl
@@ -98,6 +98,7 @@
     background-size: 42px auto;
 
   &__content
+    position: relative;
     display: flex;
     font-family: "Lato", sans-serif;
 
@@ -134,7 +135,7 @@
     font-weight: 600;
 
   &__content.flex-row &__index
-    padding-right: 10px;
+    padding-right: 15px;
 
   &__text
     font-weight: 500;
@@ -155,6 +156,9 @@
 
   &__content.flex-column.flex-align-center &__text
     text-align: center;
+
+  &--cellDefect &__text
+    white-space: nowrap;
 
   &__symbol
     display: block;
