--- a/src/styles/components/hyperglycemia/hyperglycemia.styl
+++ b/src/styles/components/hyperglycemia/hyperglycemia.styl
@@ -15,9 +15,10 @@
 
   &--sd2
     display: flex;
-    width 900px;
+    width 1024px;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 2px;
 
   &__row
     display: flex;
@@ -50,6 +51,32 @@
     display: flex;
     flex-direction: column;
 
+  &--sd2 > &__column:nth-child(1),
+  &--sd2 > &__column:nth-child(3)
+    padding-top: 77px;
+
+  &--sd2 > &__column:nth-child(2)
+    padding-left: 26px;
+    padding-right: 26px;
+
+  &--sd2 &__column.w-half:nth-child(2n)
+    padding-left: 16px;
+
+  &--sd2 &__column.w-half:nth-child(2n-1)
+    padding-right: 16px;
+
+  &--sd2 &__column .chainLink--symbolβ
+    padding-bottom: 78px;
+
+  &--sd2 &__column .chainLink--symbolβ .chainLink__content
+    margin-left: -32px;
+
+  &--sd2 &__column .chainLink--symbolβ .chainLink__text
+    font-size: 25px;
+
+  &--sd2 &__column .chainLink--kidneys
+    margin-top: 40px;
+
   &__text
     position: relative;
     font-family: "Lato", sans-serif;
@@ -57,6 +84,16 @@
 
   &__text--amylin
     margin-bottom: 40px;
+
+  &--sd2 &__text
+    font-size: 15px;
+
+  &--sd2 &__text--huge
+    font-size: 25px;
+
+  &--sd2 &__text--glucagon
+    margin-top: 20px;
+    margin-bottom: 44px;
 
   &__panel
     font-family: "Lato", sans-serif;
