--- a/src/styles/components/hyperglycemia/hyperglycemia.styl
+++ b/src/styles/components/hyperglycemia/hyperglycemia.styl
@@ -76,6 +76,7 @@
 
   &--sd2 &__column .chainLink--kidneys
     margin-top: 40px;
+    transform: translateX(-25%);
 
   &__text
     position: relative;
