--- a/src/styles/components/hyperglycemia/hyperglycemia.styl
+++ b/src/styles/components/hyperglycemia/hyperglycemia.styl
@@ -78,13 +78,20 @@
     margin-top: 40px;
     transform: translateX(-25%);
 
+  &--sd2 &__column .chainLink--intestines,
+  &--sd2 &__column .chainLink--infection
+    margin-bottom: 10px;
+
+  &--sd2 &__column .chainLink--stomach .chainLink__content
+    padding-bottom: 20px;
+
   &__text
     position: relative;
     font-family: "Lato", sans-serif;
     font-weight: 500;
 
   &__text--amylin
-    margin-bottom: 40px;
+    margin-bottom: 35px;
 
   &--sd2 &__text
     font-size: 15px;
