Все стрелки на месте

--- a/src/styles/components/hyperglycemia/hyperglycemia.styl
+++ b/src/styles/components/hyperglycemia/hyperglycemia.styl
@@ -91,6 +91,7 @@
 
   &--sd2 &__column--resistgroup
     box-sizing: border-box;
+    position: relative;
     width: 258px;
     margin-left: -16px;
     padding-top: 24px;
