--- a/src/styles/components/pagination.styl
+++ b/src/styles/components/pagination.styl
@@ -1,13 +1,13 @@
 .pagination
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  right: 32px;
+  margin-top: -40px;
+  right: 19px;
 
   &__item
-    width 16px;
+    width 13px;
     height: @width;
-    margin: 10px;
+    margin: 8px;
     background-color: white;
     border-radius: 50%;
 
