Сделали модалку с футером, но она пока не всплыввает

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,6 +1,7 @@
 @import 'reset.css';
 @import './fonts.styl';
 @import './layout.styl';
+@import './components/modal.styl';
 @import './components/pagination.styl';
 @import './components/slider.styl';
 @import './components/slide.styl';
