Добавили таймер обратного отсчета

--- a/src/styles/components/slide.styl
+++ b/src/styles/components/slide.styl
@@ -65,7 +65,7 @@
     transform: translateY(0);
     transition: transform 0.6s ease;
 
-.slide.slide--active.slide--therapy
+.slide.slide--therapy.slide--active
   background-position: 50% 0, center;
 
   .slide__title
@@ -73,6 +73,7 @@
 
 .slide.slide--details
   background-image: url("../../assets/images/details-bg.jpg");
+  background-color: #0f154e;
 
   .slide__title
     margin-left: 84px;
