Стилизовали таймер с моноширинным шрифтом и добавили на страницу

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -2,6 +2,7 @@
 @import './fonts.styl';
 @import './layout.styl';
 @import './components/modal.styl';
+@import './components/timer.styl';
 @import './components/pagination.styl';
 @import './components/slider.styl';
 @import './components/slide.styl';
