Переписали счетчик, вставили свг картинки на кнопки навигации, вызвали модалку по окончанию таймера

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,8 +1,10 @@
 @import 'reset.css';
 @import './fonts.styl';
 @import './layout.styl';
+@import './components/btn.styl';
 @import './components/modal.styl';
 @import './components/timer.styl';
+@import './components/navigation.styl';
 @import './components/pagination.styl';
 @import './components/slider.styl';
 @import './components/slide.styl';
