--- a/src/styles/components/timer.styl
+++ b/src/styles/components/timer.styl
@@ -1,21 +1,20 @@
 .timer
   display: block;
   box-sizing: border-box;
-  position: fixed;
-  bottom: 15px;
-  right: 920px;
-  min-width: 53px;
-  height: 20px;
-  padding-left: 20px;
+  min-width: 48px;
+  height: 16px;
+  margin-top: 5px;
+  transform: translateY(-10px);
+  padding-left: 16px;
   padding-right 7px;
   font-family: "Times New Roman", serif;
   font-size: 12px;
-  line-height: 20px;
+  line-height: 16px;
   text-align: right;
-  border-radius: 20px;
-  color: black;
+  border-radius: 16px;
+  color: #848485;
   background-color: white;
   background-image: url("../../assets/images/clock.svg");
   background-repeat: no-repeat;
-  background-size: 18px;
+  background-size: 14px;
   background-position: 2px 50%;
