Частично отрефакторили патогенез, вынесли данные в отдельный файл 1998 патогенеза и 2016-го

--- a/src/styles/components/chainLink/chainLink.styl
+++ b/src/styles/components/chainLink/chainLink.styl
@@ -48,8 +48,8 @@
   &--brain &__image::after
     background-image: url("../../../assets/images/brain.png");
 
-  &--musle &__image::after
-    background-image: url("../../../assets/images/musle.png");
+  &--muscle &__image::after
+    background-image: url("../../../assets/images/muscle.png");
     background-size: 95%;
     transform: rotate(-30deg);
 
@@ -71,8 +71,8 @@
   &--stomach &__image::after
     background-image: url("../../../assets/images/stomach.png");
 
-  &--small&--musle &__image::after
-    background-image: url("../../../assets/images/musle.png");
+  &--small&--muscle &__image::after
+    background-image: url("../../../assets/images/muscle.png");
     background-size: 95%;
     transform: rotate(-30deg);
 
